Added how axanivis charts are made in theory

--- a/Project/Report/references.bib
+++ b/Project/Report/references.bib
@@ -102,3 +102,11 @@ distance than 6 m}
   title = {Vision loss: a public health problem?},
   year = 2003
 }
+
+@misc{PGSoderbergOral,
+author = {Söderberg, PG.}
+}
+
+
+
+
