--- a/Project/Report/references.bib
+++ b/Project/Report/references.bib
@@ -69,6 +69,13 @@
   urldate = {2015-04-27}
 }
 
+@online{android_design,
+	author= {{Google, Inc}},
+	title = {Android Desing Principles},
+  	year = 2015,
+  	url = {http://developer.android.com/design/get-started/principles.html},
+  	urldate = {2015-05-22}
+
 @online{Kryonet,
   title = {Kryonet},
   url = {https://www.openhub.net/p/kryonet},
